crates/tribute-front/tests/snapshots/case_type__case_bool_literal.snap
---
source: crates/tribute-front/tests/case_type.rs
expression: ir_text
---
core.module @test {
  tribute_control.func @invert(%0: core.i1) -> core.i1 convention(direct) {
      %1 = arith.const {value = true} : core.i1
      %2 = arith.cmpi %0, %1 {predicate = "eq"} : core.i1
      %3 = scf.if %2 : core.i1 {
          %4 = arith.const {value = false} : core.i1
          scf.yield %4
      } {
          %5 = arith.const {value = true} : core.i1
          scf.yield %5
      }
      tribute_control.return %3
  }
}
