crates/tribute-front/tests/snapshots/case_type__case_nat_literal.snap
---
source: crates/tribute-front/tests/case_type.rs
expression: ir_text
---
core.module @test {
  tribute_control.func @classify(%0: core.i32) -> core.i32 convention(direct) {
      %1 = arith.const {value = 0} : core.i32
      %2 = arith.cmpi %0, %1 {predicate = "eq"} : core.i1
      %3 = scf.if %2 : core.i32 {
          %4 = arith.const {value = 100} : core.i32
          scf.yield %4
      } {
          %5 = arith.const {value = 1} : core.i32
          %6 = arith.cmpi %0, %5 {predicate = "eq"} : core.i1
          %7 = scf.if %6 : core.i32 {
              %8 = arith.const {value = 200} : core.i32
              scf.yield %8
          } {
              %9 = arith.const {value = 300} : core.i32
              scf.yield %9
          }
          scf.yield %7
      }
      tribute_control.return %3
  }
}
