crates/tribute-front/tests/snapshots/case_type__case_nested.snap
---
source: crates/tribute-front/tests/case_type.rs
expression: ir_text
---
core.module @test {
  tribute_control.func @nested(%0: core.i32, %1: core.i1) -> core.i32 convention(direct) {
      %2 = arith.const {value = 0} : core.i32
      %3 = arith.cmpi %0, %2 {predicate = "eq"} : core.i1
      %4 = scf.if %3 : core.i32 {
          %5 = arith.const {value = true} : core.i1
          %6 = arith.cmpi %1, %5 {predicate = "eq"} : core.i1
          %7 = scf.if %6 : core.i32 {
              %8 = arith.const {value = 10} : core.i32
              scf.yield %8
          } {
              %9 = arith.const {value = 20} : core.i32
              scf.yield %9
          }
          scf.yield %7
      } {
          %10 = arith.const {value = 30} : core.i32
          scf.yield %10
      }
      tribute_control.return %4
  }
}
