crates/tribute-front/tests/snapshots/case_type__case_result_type_unification.snap
---
source: crates/tribute-front/tests/case_type.rs
expression: ir_text
---
core.module @test {
  tribute_control.func @to_nat(%0: core.i1) -> core.i32 convention(direct) {
      %1 = arith.const {value = true} : core.i1
      %2 = arith.cmpi %0, %1 {predicate = "eq"} : core.i1
      %3 = scf.if %2 : core.i32 {
          %4 = arith.const {value = 1} : core.i32
          scf.yield %4
      } {
          %5 = arith.const {value = 0} : core.i32
          scf.yield %5
      }
      tribute_control.return %3
  }
}
